--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,13 +24,13 @@ theme:
 plugins:
   - search
   - blog
-  - rss:
-      match_path: blog/posts/.* 
-      date_from_meta:
-        as_creation: date
-      categories:
-        - categories
-        - tags 
+  # - rss:
+  #     match_path: blog/posts/.* 
+  #     date_from_meta:
+  #       as_creation: date
+  #     categories:
+  #       - categories
+  #       - tags 
 extra:
   # generator: false
   social:
